# txline-cli

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: auth.md  config.md  fixtures.md  global-flags.md  install.md  odds.md  scores.md
scripts/: txodds-cli.sh
src/: api.rs  auth.rs  cli.rs  config.rs  dispatch.rs  fixtures.rs  main.rs  odds.rs  output.rs  scores.rs  stream.rs  subscribe.rs  types.rs  validation.rs
src/config/: mod.rs  network.rs
src/subscribe/: accounts.rs  instruction.rs  keypair.rs  mod.rs  rpc.rs
src/types/: credentials.rs  fixtures.rs  mod.rs  odds.rs  scores.rs  stream.rs  subscribe.rs  validation.rs
tests/: Install-TxoddsCli.Tests.ps1
