[package]
name = "txodds"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for TxODDS/TxLINE Sports Data API"
repository = "https://github.com/swingkiddo/txline-cli"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
solana-sdk = { version = "4.0", default-features = false, features = ["full"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
indicatif = "0.17"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
directories = "6.0"
